--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "cherio": "^1.0.0-rc.2",
+    "json2csv": "^4.0.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
